Minor changes made in few files of the 'html-assignments branch

--- a/second.html
+++ b/second.html
@@ -8,7 +8,8 @@
 
 <body> 
   <h1> Welcome to this HTML file.   </h1>  <br>
-  <p> This is my file. </p>
+  <p> This is my file. </p> <br>
+  <h2> This is the second heading of this file. </h2>
  </body>
 
 </html>
