--- a/third.html
+++ b/third.html
@@ -10,6 +10,7 @@
   <h1> Welcome to this HTML file. <br>  </h1>
   <p> This is my file. </p> <br>
   <h2> Welcome to my file. </h2>
+  <h3> This is the sub-heading of this file. </h3>
  </body>
 
 </html>
