--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body> 
-  <h1> Welcome to this HTML file. </h1>
+  <h1> Welcome to this HTML file. </h1><br>
+  <h2> This is the sub-heading of this file. </h2>
  </body>
 
 </html>
